# cosmic-money

./: .env  .gitignore  Cargo.toml  README.md  cargo-sources.json  ci.yml  com.francescogaglione.cosmicmoney.json  cosmic-money.db  diesel.toml  justfile
.github/workflows/: rust.yml
i18n/en/: cosmic_money.ftl
i18n/it/: cosmic_money.ftl
i18n/sv/: cosmic_money.ftl
migrations/2024-10-06-094146_create_accounts/: up.sql
migrations/2024-10-09-102403_init/: down.sql  up.sql
migrations/2024-11-16-192333_add_tranfer_table/: down.sql  up.sql
res/: com.francescogaglione.cosmicmoney.desktop  com.francescogaglione.cosmicmoney.metainfo.xml
src/: app.rs  config.rs  errors.rs  main.rs  models.rs  schema.rs  store.rs
src/core/: localization.rs  mod.rs  nav.rs
src/pages/: accounts.rs  categories.rs  mod.rs  settings.rs  statistics.rs  transactions.rs  welcome.rs
src/synchronization/: export.rs  import.rs  mod.rs  model.rs
src/utils/: dates.rs  mod.rs
src/widget/: date_picker.rs  mod.rs
