[package]
name = "cosmic_money"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
once_cell = "1.20.0"
env_logger = "0.11"
log = "0.4"
diesel = { version = "2.2.4", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
chrono = { version = "0.4", features = ["serde"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
thiserror = "1.0.64"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.132"
diesel_migrations = "2.2.0"
directories = "5.0.1"
constcat = "0.5"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    "xdg-portal",
]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
